Fixed targetting, works on all platforms as well. Commented out file-writing so it works on android. ALSO: Moved all assets into the Geonauts-android project on my computer: reduced file size of game on android from 30MB to 10MB. We'll have to figure out how to push the images to git from android project.